--- a/web/WebContent/index.html
+++ b/web/WebContent/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <meta charset="UTF-8">
     <title>index.html</title>
@@ -15,50 +16,18 @@
         } */
     </style>
 </head>
-<body>
-    <div id='show'></div>
+
+<body id='bdy'>
+    <div></div>
     <ul id='list'></ul>
     <ul id="members"></ul>
-    <!-- <script src="javascript/object.js"></script> -->
-    <!-- <script src="javascript/class.js"></script> -->
-    <!-- <script src="javascript/object2.js"></script> -->
-    <!-- <script src="javascript/array.js"></script> -->
-    <!-- <script src="javascript/string.js"></script> -->
+    <table id='tb1' border='1'></table>
+    <p />
+    <button onclick=''>색변경하기</button>
 
     <script>
-    // let userName = prompt("당신의 영문 이름은?","");
 
-    // let upperName = userName.toUpperCase();
-    // document.write(upperName, "<br>");
-
-    // let userNum = prompt("당신의 연락처는?", "");
-    // let result = userNum.substring(0, userNum.length - 4) + "****";
-    // document.write(result, "<br>");
-
-    // let userEmail = prompt ("당신의 이메일 주소는?", "");
-    // let arrUrl = [".co.kr", ".com", ".net", ".or.kr", ".go.kr"];
-
-    // let check1 = false;
-    // let check2 = false;
-
-    // if (userEamil.indexOf("@") > 0) {
-    //     check1 = true;
-    // }
-
-    // for (let i = 0; i<arrUrl.length; i++) {
-    //     if(userEmail.indexOf(arrUrl[i]) > 0) {
-    //         check2 = true;
-    //     }
-    // }
-
-    // if (check1 && check2) {
-    //     document.write(userEmail);
-    // } else {
-    //     alert("이메일 형식이 잘못되었습니다.");
-    // }
-
-    console.log(this); // window의 하위 요소들을 보여준다
-   
     </script>
 </body>
+
 </html>
